deployment/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    ecb.team: ${GPP_TEAM}
    ecb.domain: ${GPP_DOMAIN}
    app.kubernetes.io/name: ${NAME}
    app.kubernetes.io/version: ${VERSION}
    app.kubernetes.io/part-of: ${SERVICE_NAME}
    app.kubernetes.io/managed-by: kubectl
