deployment/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${SERVICE_NAME}
    ecb.team: ${GPP_TEAM}
    ecb.domain: ${GPP_DOMAIN}
    app.kubernetes.io/name: ${NAME}
    app.kubernetes.io/version: ${VERSION}
    app.kubernetes.io/component: microservice
    app.kubernetes.io/part-of: ${OWNING_APPLICATION}
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      namespace: ${NAMESPACE}
      labels:
        app: ${SERVICE_NAME}
    spec:
      automountServiceAccountToken: false
      containers:
      - name: main
        image: ${FQ_IMAGE_NAME}
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 40M
          limits:
            cpu: 100m
            memory: 100M
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        securityContext:
            runAsUser: 1000
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            privileged: false
        livenessProbe:
            httpGet:
              path: "/probes/liveness"
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 30
            failureThreshold: 3
        readinessProbe:
          httpGet:
            path: "/probes/readiness"
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 3
        terminationMessagePath: /dev/stdout
