deployment/03-service.yml
apiVersion: v1
kind: Service
metadata:
    name: ${APP_NAME}
    namespace: ${NAMESPACE}
    labels:
      team: ${TEAM}
      domain: ${DOMAIN}
      ecb.kubernetes.io/name: ${APP_NAME}
      app.kubernetes.io/version: ${VERSION}
      app.kubernetes.io/part-of: ${APP_NAME}
      app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app: ${APP_NAME}
  ports:
  - protocol: TCP
    port: 8000
    targetPort: http
