deployment/07-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: summarizer-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - summarizer.ecb.senacor.cloud
    secretName: tls-secret
  rules:
  - host: summarizer.senacor.cloud
    http:
      paths:
      - path: /pewters/(.*)
        pathType: Prefix
        backend:
          service:
            name: summarizer-server
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: summarizer-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - summarizer.ecb.senacor.cloud
    secretName: tls-secret
  rules:
  - host: summarizer.senacor.cloud
    http:
      paths:
      - path: /static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: summarizer-server
            port:
              number: 8000
